--- a/src/client/components/Button/button.css
+++ b/src/client/components/Button/button.css
@@ -1,3 +1,16 @@
-.round {
+.button {
+  cursor: pointer;
+}
+
+.button:hover:not(:disabled) {
+  box-shadow: 0px 0px 1px 1px rgb(115 105 105 / 24%);
+}
+
+.button:disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
+}
+
+.button.round {
   border-radius: 50%;
 }
