--- a/src/client/components/TodoItem/todoItem.css
+++ b/src/client/components/TodoItem/todoItem.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
   width: 100%;
   max-width: 46rem;
   background: rgb(128 128 128 / 8%);
@@ -11,15 +12,21 @@
   box-shadow: 0px 2px 4px 1px rgb(0 0 0 / 15%);
 }
 
-.todo-item .todo-button {
-  flex-shrink: 0;
+.item-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  margin-right: 1rem;
+}
+
+.button-container {
+  display: flex;
+  margin-left: auto;
+}
+
+.todo-item .todo-button {
+  flex-shrink: 0;
   width: 2.25rem;
   height: 2.25rem;
-  margin: 1rem;
-  border: 1px solid rgb(205 201 201);
 }
 
 .todo-icon {
@@ -36,7 +43,7 @@
 }
 
 .text {
-  margin-right: auto;
+  margin: 1rem 1rem 1rem 0;
 }
 
 .completed .text {
