--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,10 +1,20 @@
 .title {
-  width: 100%;
-  text-align: center;
   font-size: 1.6rem;
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
   margin: 2rem 0;
 }
 
 .list {
   margin: 2rem;
+}
+
+.add-button {
+  position: absolute;
+  bottom: 3rem;
+  right: 2rem;
+  width: 4rem;
+  height: 4rem;
+  background: radial-gradient(#85b8d25c, #8591d25e, #baafdb61, #e687e15e);
 }
