--- a/src/client/components/Button/button.css
+++ b/src/client/components/Button/button.css
@@ -1,5 +1,11 @@
 .button {
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem;
+  border: 1px solid rgb(205 201 201);
+  border-radius: 4px;
 }
 
 .button:hover:not(:disabled) {
